fragments with ViewPager added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="specify_time">specify notification time if necessary</string>
     <string name="greetings_text">This app sends notifications to smartphones</string>
     <string name="title">specify title if necessary</string>
+
+    <string name="one">one</string>
+    <string name="two">two</string>
+    <string name="three">three</string>
+
+    <string name="dummy_text_small">Suppose that you were sitting down at this table</string>
+
 </resources>
